[package]
name = "vesting_contracts"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[[bench]]
name = "lazy_vs_full"
harness = false
